WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138947
REGRESSION(
r175259
) Simple line layout text measuring behavior changed.
https://bugs.webkit.org/show_bug.cgi?id=138947
Summary
REGRESSION(r175259) Simple line layout text measuring behavior changed.
alan
Reported
2014-11-20 20:22:23 PST
Complex line layout measures text including the trailing space and it subtracts (the constant value of) space width afterwards. 'FOO ' -> 55.5px -> subtract 4px for space -> 51.5px vs. 'FOO' -> 51.5px It certain cases, this results in different word width and forces unexpected line breaking.
Attachments
Patch
(5.05 KB, patch)
2014-11-20 20:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.11 KB, patch)
2014-11-20 20:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.81 KB, patch)
2014-11-20 21:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.91 KB, patch)
2014-11-21 11:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-11-20 20:42:08 PST
Created
attachment 242019
[details]
Patch
alan
Comment 2
2014-11-20 20:43:01 PST
rdar://problem/19050653
alan
Comment 3
2014-11-20 20:44:39 PST
Created
attachment 242020
[details]
Patch
alan
Comment 4
2014-11-20 21:26:54 PST
Created
attachment 242021
[details]
Patch
alan
Comment 5
2014-11-21 11:36:14 PST
Created
attachment 242056
[details]
Patch
WebKit Commit Bot
Comment 6
2014-11-21 13:08:44 PST
Comment on
attachment 242056
[details]
Patch Clearing flags on attachment: 242056 Committed
r176470
: <
http://trac.webkit.org/changeset/176470
>
WebKit Commit Bot
Comment 7
2014-11-21 13:08:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug