REGRESSION(r175259) Simple line layout text measuring behavior changed. https://bugs.webkit.org/show_bug.cgi?id=138947 rdar://problem/19050653

Reviewed by Antti Koivisto.

In certain cases, when block flow needs to compute the preferred width of a particular text
renderer, we use the non-simple line layout text measuring.
However, the same text renderer might end up at simple line layout later.
Complex line layout measures text including the trailing space and it subtracts
(the constant value of) space width afterwards, while simple line layout measures
runs without the extra space.
In such cases, this may result different word widths and produce unexpected line breaking. (preferred width != final width)
In long term, any text renderer qualified for simple line layout should go through the simple
text measuring code path. (https://bugs.webkit.org/show_bug.cgi?id=138973)
For now, just copy complex line layout behaviour. This also matches the previous simple line layout line breaking implementation.

Source/WebCore:

Test: fast/text/simple-line-text-measuring-with-trailing-space.html

* rendering/SimpleLineLayoutFlowContents.cpp:
(WebCore::SimpleLineLayout::FlowContents::textWidth):

LayoutTests:

* fast/text/simple-line-text-measuring-with-trailing-space-expected.html: Added.
* fast/text/simple-line-text-measuring-with-trailing-space.html: Added.


Canonical link: https://commits.webkit.org/156850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176470 268f45cc-cd09-0410-ab3c-d52691b4dbfc